# ebook-tools

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: PRP-README.md  search.instructions.md  techdocs.instructions.md  tests.instructions.md
.github/prompts/: addOnlineTenant.prompt.md  bugFixRapidResponse.prompt.md  cleanCodeRefactor.prompt.md  coverageHandoff.prompt.md  featureSliceDelivery.prompt.md  iterativeCodeSimplification.prompt.md  prpPlanOnly.prompt.md  researchIdeation.prompt.md  testHardening.prompt.md
docs/tools/: check_epub_toc.md  debug_epub_conversions.md
docs/utils/: epub_converter.md  pdf_converter.md  toc_checker.md
src/ebook_tools/: __init__.py  converter_base.py  epub_converter.py  epub_models.py  pdf_converter.py  toc_checker.py
src/ebook_tools/cli/: check_epub_toc.py  convert_docs.py  debug_epub_conversions.py
tests/unit/: test_convert_docs_cli.py  test_convert_docs_helpers_more.py  test_epub_converter.py  test_epub_converter_extra.py  test_epub_converter_helpers_extra.py  test_epub_converter_helpers_more.py  test_epub_converter_helpers_unit.py  test_epub_converter_integration.py  test_epub_converter_structured_sections.py  test_epub_structured_section_edges.py  test_epub_toc_generation.py  test_nav_aligned_toc_builder.py  test_pdf_converter.py  test_toc_checker.py  test_toc_checker_extra.py  test_toc_checker_unit.py
