[project]
name = "ebook-tools"
version = "0.1.0"
description = "Ebook and PDF to Markdown converters extracted from docs-mcp-server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "ebooklib>=0.18",
    "markdownify>=0.12.1",
    "pydantic>=2.0.0",
    "pymupdf>=1.26.5",
    "pymupdf4llm>=0.0.27",
]

[project.scripts]
convert-docs = "ebook_tools.cli.convert_docs:main"
check-epub-toc = "ebook_tools.cli.check_epub_toc:main"
debug-epub-conversions = "ebook_tools.cli.debug_epub_conversions:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.4.4",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py310"
include = ["src/**/*.py", "tests/**/*.py"]

[tool.pytest.ini_options]
markers = ["unit: fast, hermetic tests"]
asyncio_mode = "auto"
